[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/screen/screen.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 72 )

[node name="Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionArea" type="CollisionShape2D" parent="ScreenArea"]
shape = SubResource( 1 )

[connection signal="body_entered" from="ScreenArea" to="." method="_on_ScreenArea_body_entered"]
[connection signal="body_exited" from="ScreenArea" to="." method="_on_ScreenArea_body_exited"]
